--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "enter program name, for example ${workspaceFolder}/a.out",
+            "program": "${workspaceFolder}/lib/MeshUp/MeshReverseEngineering/core2cha_layout",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}/lib/MeshUp/MeshReverseEngineering/core2cha_layout",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
