--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/victoryang00/SKX-SF-Conflicts
 [submodule "lib/MeshUp"]
 	path = lib/MeshUp
-	url = https://github.com/stefan1wan/MeshUp
+	url = https://github.com/victoryang00/MeshUp
 [submodule "lib/pcm"]
 	path = lib/pcm
 	url = https://github.com/intel/pcm
