--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: '3.11'
       
       - name: Install dependencies
         run: |
@@ -24,9 +24,9 @@ jobs:
 
       - name: Install dependancies
         run: |
-          sudo apt-get install -y binutils cmake gcc g++
+          sudo apt-get install -y binutils cmake g++-13
 
       - name: Install
         run: |
-          sudo python setup.py install 
+          CC=gcc-13 CXX=g++-13 python setup.py install 
           pyinstaller ./sprtop/sprtop.py
